<resources>
    <string name="Add_to_block_list">Add %s to block list</string>
    <string name="AsusContact_reminddatepicker_cancelremind">Remove</string>
    <string name="Blocked_list">Block list</string>
    <string name="Cancel">Cancel</string>
    <string name="Import_All">Import contacts from all SIM cards</string>
    <string name="Not_hide_number_for_next_call">"Don't hide number for the next call"</string>
    <string name="Remove_from_blockd_list">Remove %s from block list</string>
    <string name="Unblock_message">Are you sure you want to remove this contact or number from the block list?</string>
    <string name="White_list">White list</string>
    <string name="about_rate_now">Rate now!</string>
    <string name="about_recommend">Recommend ASUS Contacts?</string>
    <string name="about_version">"Version %1$s "</string>
    <string name="accessibility_overflow">overflow</string>
    <string name="account_local">Device</string>
    <string name="account_local_verizon">Tablet</string>
    <string name="account_phone">Phone only, unsynced</string>
    <string name="account_type_format">%1$s contact</string>
    <string name="actionbar_menu_add">ADD</string>
    <string name="activity_not_available">No installed activity available to handle selected action.</string>
    <string name="activity_title_confirm_add_detail">Add to contact</string>
    <string name="activity_title_settings">Settings</string>
    <string name="addPeopleToGroup">To add some, edit this group</string>
    <string name="add_account">Add account</string>
    <string name="add_connection_button">Add connection</string>
    <string name="add_contact_dlg_message_fmt">Add \"%s\" to contacts?</string>
    <string name="add_contact_to_widget">Add contacts to widget</string>
    <string name="add_field">Add another field</string>
    <string name="add_new_account">Add account</string>
    <string name="add_new_entry_for_section">Add new</string>
    <string name="add_number_hint">No group members</string>
    <string name="add_organization">Add an organization</string>
    <string name="add_to_exist_contact">Add to an existing contact</string>
    <string name="add_to_favorite_prompt">You may group your friends, family, and colleagues to Favorites.</string>
    <string name="add_to_favorite_prompt_checkbox_text">Do not show again</string>
    <string name="add_to_favorite_prompt_dialog_title">Reminder</string>
    <string name="add_to_favorite_toast">Added %s to Favorites</string>
    <string name="add_to_my_contacts">Add to My Contacts</string>
    <string name="add_to_vip_menu_text">Add to VIP group</string>
    <string name="aggregation_suggestion_edit_dialog_message">Switch to editing the selected contact? Information you entered so far will be copied.</string>
    <string name="aggregation_suggestion_join_dialog_message">"Join
        the current contact with the selected contact?"</string>
    <string name="all_sim_cards">All SIM cards</string>
    <string name="app_name">Block &amp; White List</string>
    <string name="asus_add_calllog">Recent call logs</string>
    <string name="asus_call_log_filter_all">All calls</string>
    <string name="asus_call_log_filter_incoming">Incoming calls</string>
    <string name="asus_call_log_filter_missed">Missed calls</string>
    <string name="asus_call_log_filter_outgoing">Outgoing calls</string>
    <string name="asus_call_log_filter_title">View by</string>
    <string name="asus_call_log_filter_videocalls">Video calls</string>
    <string name="asus_call_log_filter_voicecalls">Voice calls</string>
    <string name="asus_caller_book_hotel_aiirline">Booking Services</string>
    <string name="asus_caller_crank">Harassment</string>
    <string name="asus_caller_express">Delivery Service</string>
    <string name="asus_caller_financial_products">Financial Products</string>
    <string name="asus_caller_fraud">Fraud</string>
    <string name="asus_caller_headhunting">Head Hunting</string>
    <string name="asus_caller_house_agent">House Property</string>
    <string name="asus_caller_insurance">Insurance</string>
    <string name="asus_caller_promote_sale">Sales/Advertisement</string>
    <string name="asus_caller_public_services">Public Services</string>
    <string name="asus_caller_repair">Repair Services</string>
    <string name="asus_calllogs">Call logs</string>
    <string name="asus_choose_contact_source">Choose a contact source</string>
    <string name="asus_confirm_export_message_account" formatted="false">All contacts from %s will be exported to file: %s.</string>
    <string name="asus_confirm_export_message_all">All your contact list will be exported to file: %s.</string>
    <string name="asus_contacts">Contacts</string>
    <string name="asus_copy_confirm_text" formatted="false">Are you sure you want to copy contacts from \"%s\" to \"%s\"</string>
    <string name="asus_copy_contacts">Copy contacts</string>
    <string name="asus_copy_fail">Copy failed</string>
    <string name="asus_copy_fail_text">Failed to copy contacts. Some contacts may not be copied.</string>
    <string name="asus_copy_progress_text" formatted="false">Copying contacts from \"%s\" to \"%s\"</string>
    <string name="asus_copy_success">Copied contacts successfully</string>
    <string name="asus_delete_calllog">Delete call log</string>
    <string name="asus_delete_contact_dialog_message">Delete the contact \"%1$s\"?</string>
    <string name="asus_delete_multiple_contacts">Delete multiple contacts</string>
    <string name="asus_delete_sim_contact_dialog_message">Delete the SIM card contact \"%1$s\"?</string>
    <string name="asus_delete_sync_contact_dialog_message">"Delete the contact \"%1$s\"?
This contact will be deleted from both phone and server."</string>
    <string name="asus_dialpad">Telephone</string>
    <string name="asus_export">Export</string>
    <string name="asus_favorites">Favorites</string>
    <string name="asus_import">Import</string>
    <string name="asus_linked_contacts_photo_change">Change photo</string>
    <string name="asus_multipleContactDeleteConfirmation">Deleting \"%1$s\" contact will delete information from multiple accounts.</string>
    <string name="asus_no_contacts_in_account">There are no contacts in this account.</string>
    <string name="asus_set_group_ringtone">Set group ringtone</string>
    <string name="asus_setting_display_source_account">Display source account</string>
    <string name="asus_setting_display_source_account_detail">Display source account icons on contacts list</string>
    <string name="asus_setting_only_phone">Only contacts with phones</string>
    <string name="asus_setting_only_phone_text">Only display contacts with phone numbers</string>
    <string name="backup_calllog">Backup call log</string>
    <string name="callGuard_block_Dialog_hint1">Block this number?</string>
    <string name="callGuard_block_Dialog_hint2">Tag this number?</string>
    <string name="callGuard_block_Dialog_hint3">You are welcome to provide information.</string>
    <string name="call_later">Call later</string>
    <string name="callguard_self_input_hint">Custom name</string>
    <string name="captioning_foreground_color">Text colour</string>
    <string name="copy_single_contact">Copy contact</string>
    <string name="customized_background_title">My background</string>
    <string name="customized_calllog_background">Call log background</string>
    <string name="customized_contact_list_background">Contact list background</string>
    <string name="customized_dialpad_background">Dialpad background</string>
    <string name="customized_font_settings">My font</string>
    <string name="customized_theme_title">My theme</string>
    <string name="dark_theme_setting_detail">Apply dark color layout</string>
    <string name="dark_theme_setting_title">Dark theme</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="emptyGroup">No people in this group</string>
    <string name="ez_mode_setting_detail">When turning on Easy mode, apply Easy mode for Contacts</string>
    <string name="ez_mode_setting_title">Enable Easy mode for Contacts</string>
    <string name="key_always_block_calls">key_always_block_calls</string>
    <string name="key_custom_profile_switch">key_custom_profile_switch</string>
    <string name="key_hide_caller_number">key_hide_caller_number</string>
    <string name="key_incoming_calls">key_incoming_calls</string>
    <string name="key_reset_pin">key_reset_pin</string>
    <string name="link_with_other_contacts">Link with other contacts</string>
    <string name="longpress_add_contact_to_group">Add contacts to group</string>
    <string name="longpress_call_with_sim1">Dial from SIM 1</string>
    <string name="longpress_call_with_sim2">Dial from SIM 2</string>
    <string name="longpress_delete_group">Delete group</string>
    <string name="longpress_edit_group">Edit group</string>
    <string name="menu_Block_caller">"Add to block list "</string>
    <string name="menu_Call_duration">Call duration</string>
    <string name="menu_Copy_number">"Copy number "</string>
    <string name="menu_Delete_all_call_logs_from_contact">Delete all calls of this contact</string>
    <string name="menu_Delete_contact">Delete contact</string>
    <string name="menu_Delete_this_call_log">Delete this call log</string>
    <string name="menu_Edit_contact">Edit contact</string>
    <string name="menu_Link_contact">Link contact</string>
    <string name="menu_Mark_number">Tag this number</string>
    <string name="menu_Mark_number_revise">Update tag</string>
    <string name="menu_Remove_from_favorites">Remove from Favorites</string>
    <string name="menu_Share_contact">Share contact</string>
    <string name="menu_Unblock">Remove from block list</string>
    <string name="menu_addStar">Add to Favorites</string>
    <string name="menu_add_to_favorites">Add to Favorites</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit_global_groups">Edit all groups</string>
    <string name="menu_edit_vip_group">Edit VIP group</string>
    <string name="menu_sendGroup">Send group message</string>
    <string name="menu_sendTextMessage">Send text message</string>
    <string name="menu_send_group_email">Send group e-mail</string>
    <string name="menu_set_sms_group_sound">Set group message notification</string>
    <string name="menu_view_calllog">View call log</string>
    <string name="monotype_preference_title">Font style</string>
    <string name="no_vip_member_text1_1">Add key contacts to your VIP to avoid missing important calls, messages and emails.</string>
    <string name="preference_displayOptions">Display options</string>
    <string name="private_always_block_calls">Always block private calls</string>
    <string name="private_custom_profile">Customized profile</string>
    <string name="private_hide_caller_number">Hide caller number</string>
    <string name="private_incoming_calls">Incoming calls</string>
    <string name="private_reset_pin">Reset PIN</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="recentCalls_editNumberBeforeCall">Edit number before calling</string>
    <string name="recentCalls_removeFromRecentList">Remove from call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="restore_call_log">Restore call log</string>
    <string name="send_out_call_log">Send out call log</string>
    <string name="uf_sdk_instant_answer_question">Is this FAQ helpful?</string>
    <string name="uv_no">No</string>
    <string name="uv_yes">Yes</string>
    <string name="viewContactDesription">View contact</string>
</resources>