<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/private_reset_pin" android:key="@string/key_reset_pin">
        <intent android:targetPackage="com.asus.contacts" android:targetClass="com.asus.privatecontacts.pin.PrivatePinSettingActivity" />
    </Preference>
    <PreferenceCategory android:title="@string/private_incoming_calls" android:key="@string/key_incoming_calls">
        <CheckBoxPreference android:title="@string/private_always_block_calls" android:key="@string/key_always_block_calls" android:defaultValue="false" android:disableDependentsState="true" />
        <CheckBoxPreference android:title="@string/private_hide_caller_number" android:key="@string/key_hide_caller_number" android:defaultValue="false" />
        <com.asus.privatecontacts.settings.CustomSwitchPreference android:title="@string/private_custom_profile" android:key="@string/key_custom_profile_switch" android:defaultValue="false">
            <intent android:targetPackage="com.asus.contacts" android:targetClass="com.asus.privatecontacts.settings.PrivateEditProfileActivity" />
        </com.asus.privatecontacts.settings.CustomSwitchPreference>
    </PreferenceCategory>
</PreferenceScreen>