<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/customized_theme_title" android:key="customized_theme_category">
        <CheckBoxPreference android:title="@string/dark_theme_setting_title" android:key="dark_theme" android:summary="@string/dark_theme_setting_detail" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/customized_font_settings" android:key="customized_font_category">
        <Preference android:title="@string/monotype_preference_title" android:key="key_font_setting" />
        <Preference android:title="@string/captioning_foreground_color" android:key="key_font_color_setting" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/customized_background_title" android:key="customized_background_category">
        <Preference android:title="@string/customized_dialpad_background" android:key="customized_background_dialpad" />
        <Preference android:title="@string/customized_calllog_background" android:key="customized_background_calllog" />
        <Preference android:title="@string/customized_contact_list_background" android:key="customized_background_contact_list" />
    </PreferenceCategory>
</PreferenceScreen>