<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/group_dial_from_sim1" android:orderInCategory="1" android:title="@string/longpress_call_with_sim1" android:showAsAction="withText" />
    <item android:id="@id/group_dial_from_sim2" android:orderInCategory="1" android:title="@string/longpress_call_with_sim2" android:showAsAction="withText" />
    <item android:id="@id/group_call" android:orderInCategory="1" android:title="@string/menu_call" android:showAsAction="withText" />
    <item android:id="@id/group_send_message" android:orderInCategory="2" android:title="@string/menu_sendTextMessage" android:showAsAction="withText" />
    <item android:id="@id/group_edit_contacts" android:orderInCategory="3" android:title="@string/menu_Edit_contact" android:showAsAction="withText" />
    <item android:id="@id/group_delete_contacts" android:orderInCategory="4" android:title="@string/menu_Delete_contact" android:showAsAction="withText" />
    <item android:id="@id/group_share_contacts" android:orderInCategory="5" android:title="@string/menu_Share_contact" android:showAsAction="withText" />
    <item android:id="@id/group_link_contacts" android:orderInCategory="6" android:title="@string/menu_Link_contact" android:showAsAction="withText" />
    <item android:id="@id/copy_contact" android:orderInCategory="7" android:title="@string/copy_single_contact" android:showAsAction="withText" />
    <item android:id="@id/group_remove_from_group" android:orderInCategory="8" android:title="@string/remove_from_group" android:showAsAction="withText" />
    <item android:id="@id/group_block_caller" android:visible="false" android:orderInCategory="9" android:title="@string/menu_Block_caller" android:showAsAction="withText" />
    <item android:id="@id/group_unblock" android:orderInCategory="10" android:title="@string/menu_Unblock" android:showAsAction="withText" />
</menu>