<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/asus_contacts2_ic_add" android:id="@id/add_vip" android:visible="false" android:orderInCategory="1" android:title="@string/longpress_add_contact_to_group" android:showAsAction="always" />
    <item android:id="@id/edit_vip" android:orderInCategory="1" android:title="@string/menu_edit_vip_group" android:showAsAction="withText" />
    <item android:id="@id/menu_set_group_ringtone_vip" android:orderInCategory="2" android:title="@string/asus_set_group_ringtone" />
    <item android:id="@id/menu_set_group_sms_ringtone_vip" android:orderInCategory="3" android:title="@string/menu_set_sms_group_sound" />
    <item android:id="@id/menu_send_group_vip" android:orderInCategory="4" android:title="@string/menu_sendGroup" />
    <item android:id="@id/menu_send_group_email" android:orderInCategory="5" android:title="@string/menu_send_group_email" />
</menu>