<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/callguard_blockandtag_dialog_hint1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="6.0dip" android:text="@string/callGuard_block_Dialog_hint1" android:layout_alignParentLeft="true" />
        <CheckBox android:id="@id/callGuard_block_dialog_blockCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip">
        <TextView android:textSize="16.0dip" android:textColor="@color/callguard_blockandtag_dialog_hint1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginBottom="5.0dip" android:text="@string/callGuard_block_Dialog_hint2" />
        <Spinner android:id="@id/callGuard_block_dialog_tagTypeSpinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/edit_container" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/callGuard_block_dialog_manualTagEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/callguard_self_input_hint" android:inputType="textAutoCorrect" />
            <TextView android:textSize="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="0.0dip" android:text="@string/callGuard_block_Dialog_hint3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>