<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper android:id="@id/uv_view_flipper" android:background="@android:color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/uv_helpful_section" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <View android:background="#ff33c3e7" android:layout_width="fill_parent" android:layout_height="2.0px" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/uf_sdk_instant_answer_question" />
                <TableLayout android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:columnCount="2">
                    <TableRow>
                        <Button android:id="@id/uv_unhelpful_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uv_no" android:layout_weight="1.0" />
                        <Button android:id="@id/uv_helpful_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/uv_yes" android:layout_weight="1.0" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/uv_helpful_section">
            <LinearLayout android:orientation="vertical" android:id="@id/uv_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </ScrollView>
    </RelativeLayout>
</ViewFlipper>